# CGFromScratch

./: .gitignore  CMakeLists.txt  README.md
src/: Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Sphere.cpp  Sphere.hpp  Vec3.cpp  Vec3.hpp  Viewport.cpp  Viewport.hpp  main.cpp
